# sa-prometheus-exporters

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  .yamllint  CONVENTIONS.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml
.github/: ci.yml
box-example/: .projmodules  bootstrap_mac.sh  box.yml  init.sh  init_galaxy.sh  provision_box.sh  requirements.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/: Readme.md  requirements-dev.txt  requirements.yml
tasks/: main.yml  tasks_go.yml  tasks_prometheus_apache_exporter.yml  tasks_prometheus_blackbox_exporter.yml  tasks_prometheus_cadvisor_exporter.yml  tasks_prometheus_cloudwatch.yml  tasks_prometheus_cloudwatch_exporter.yml  tasks_prometheus_ecs_exporter.yml  tasks_prometheus_elasticsearch_exporter.yml  tasks_prometheus_keepalived_exporter.yml  tasks_prometheus_memcached_exporter.yml  tasks_prometheus_mongodb_exporter.yml  tasks_prometheus_monit_exporter.yml  tasks_prometheus_mysqld_exporter.yml  tasks_prometheus_nginx_exporter.yml  tasks_prometheus_node_exporter.yml  tasks_prometheus_pgbouncer_exporter.yml  tasks_prometheus_phpfpm_exporter.yml  tasks_prometheus_postgres_exporter.yml  tasks_prometheus_proxysql_exporter.yml  tasks_prometheus_redis_exporter.yml  tasks_prometheus_sql_exporter.yml  tasks_prometheus_ssl_exporter.yml  tasks_prometheus_users.yml  tasks_startup.yml
templates/: cadvisor.amzn.j2  cadvisor.systemd.j2  cadvisor.upstart.j2  cloudwatch.service.j2  cloudwatch_exporter_config.yml.j2  exporter_configuration.j2  pgbouncer.service.j2  (+3 more)
(+62 files in other folders)
